--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/scripts.js" defer></script>
-    <title>Gerador QR Code</title>
+    <title>QR Code Generator</title>
   </head>
   <body>
     <div class="container">
       <header id="qr-header">
-        <h1>Gerador de QR Code</h1>
-        <p>Insira uma URL ou Texto, para criar um QR Code</p>
+        <h1>QR Code Generato</h1>
+        <p>Enter a URL or Text to create a QR Code</p>
       </header>
       <div id="qr-form">
         <input type="text" placeholder="Digite a URL ou texto" />
-        <button>Gerar QR Code</button>
+        <button>Generate QR Code</button>
       </div>
       <div id="qr-code">
         <img src="img/qrcode.png" alt="qrcode" />
