--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <header id="qr-header">
-        <h1>QR Code Generato</h1>
+        <h1>QR Code Generator</h1>
         <p>Enter a URL or Text to create a QR Code</p>
       </header>
       <div id="qr-form">
