--- a/index.html
+++ b/index.html
@@ -1,63 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles2.css">
-    <script src="js/script.js" defer></script>
-    <title>My portifolio</title>
-</head>
-
-<body>
-    <div class="title">
-        <h1>Some of my <span class="palavra">projects</span>:</h1>
-        <i>Click on the names to be redirected to the projects on github!</i>
-    </div>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="js/scripts.js" defer></script>
+    <title>QR Code Generator</title>
+  </head>
+  <body>
     <div class="container">
-        <h3><a href="https://github.com/LerryHP/Aplicativo-de-certificacao" target="_blank">VerifiQ </a> </br>
-            Sneaker verification and certification platform via blockchain</h3>
-        <h4>This project it about a service where a costumer post various photos of your sneaker (tennis) and after pay
-            a tax, he recieve a blockchain certificate of originality thas proves that the sneaker its not fake. This
-            project
-            had a complex development because it is about integrating blockchain with the backend and frontend. </br>
-            My function, its develop the frontend, where, using HTML, CSS and Javascript, i delivered on time with a
-            good final result:
-        </h4>
-        <h4>In this project, i acquired satisfactory knowledge about the rules of HTML and CSS, learn how to make
-            animations, i also accept JS as a
-            magical solver of unsolvable problems. The javascript helped us in the login, doing a basic animation, and
-            removing the "Login Button" of the screen, after the user logs in. My team have to do a good colaborations
-            and comunication, utilizing the GitHug.</h4>
-        <h4>This project learn me various frontend techinicals and who to make a excellent teamwork.</h4>
+      <header id="qr-header">
+        <h1>QR Code Generator</h1>
+        <p>Insert a URL or Text to create a QR Code</p>
+      </header>
+      <div id="qr-form">
+        <input type="text" placeholder="Digite a URL ou texto" />
+        <button>Generate QR Code</button>
+      </div>
+      <div id="qr-code">
+        <img src="img/qrcode.png" alt="qrcode" />
+      </div>
     </div>
-
-    <div class="container">
-        <h3><a href="https://github.com/gabmajeau/Site-pediatria" target="_blank">Pediatrics website</a></h3>
-        <h4>A costumer ask to a website where various informations about pediatric medicine where the informations are
-            easily accessible visual, to all audiences. This service worked to i learn more utilites from HTML and CSS,
-            and communication with the costumer.</h4>
-            <h4>The initial idea was a simple website, but the costumer ask a means of identify how many access the website have, the solution that i found it using php.</h4>
-    </div>
-
-    <div class="container">
-        <h3><a href="https://github.com/gabmajeau/Advanced_ToDo" target="_blank">Advanced ToDo</a></h3>
-    </div>
-
-    <div class="container">
-        <h3><a href="https://github.com/gabmajeau/QRCode_Generator" target="_blank">QR Code generator with API</a></h3>
-    </div>
-
-    <div class="container">
-        <h3><a href="https://github.com/gabmajeau/Box_shadow_generator" target="_blank">Box shadow generator</a> </h3>
-    </div>
-
-    <div class="container">
-        <h3><a href="https://github.com/gabmajeau/Lazy_Loading" target="_blank">Study about lazy loading</a></h3>
-    </div>
-
-</body>
-
+  </body>
 </html>
